# space-traders

./: README.md  package-lock.json  package.json  vite.config.js
src/: app.html
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/.openapi-generator/: FILES
src-tauri/docs/: GetSystemWaypointsTraitsParameter.md  SystemsApi.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/apis/: agents_api.rs  systems_api.rs
src-tauri/src/helpers/: agent.rs  configuration.rs  contracts.rs  mission.rs  mod.rs  ships.rs
src-tauri/src/models/: faction.rs  faction_trait.rs  get_system_waypoints_traits_parameter.rs  mod.rs  register_request.rs  system_faction.rs  waypoint_faction.rs  waypoint_trait.rs
src/lib/: stores.js
src/lib/contract/: contract.svelte
src/lib/helpers/: helpers.js
src/lib/ship/: ship.svelte
src/routes/: +layout.js  +layout.svelte  +page.svelte
src/routes/contracts/: +page.svelte
src/routes/mission/: +page.svelte
src/routes/ships/: +page.svelte
